--- a/LifeExpectancyAnalyzer/LifeExpectancyAnalyzer/Properties/launchSettings.json
+++ b/LifeExpectancyAnalyzer/LifeExpectancyAnalyzer/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -19,7 +19,7 @@
     "LifeExpectancyAnalyzer": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/Countries",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
